@@ -209,7 +209,7 @@ int main(int argc, char *argv[])
    int num_procs = Mpi::WorldSize();
    int myid = Mpi::WorldRank();
 
-   Mesh *serial_mesh = new Mesh("data/multidomain-hex.mesh");
+   Mesh *serial_mesh = new Mesh("../../data/multidomain-hex.mesh");
    ParMesh parent_mesh = ParMesh(MPI_COMM_WORLD, *serial_mesh);
    delete serial_mesh;
 
@@ -308,7 +308,7 @@ int main(int argc, char *argv[])
    bool last_step = false;
    int vis_steps = 10;
 
-   char vishost[] = "128.15.198.77";
+   char vishost[] = "localhost";
    int  visport   = 19916;
 
    socketstream cyl_sol_sock(vishost, visport);
